# blob_detector

./: .editorconfig  .gitignore  Makefile  README.md  deploy_latest.sh  requirements.txt  setup.cfg  setup.py
blob_detector/: detect.py
blob_detector/core/: __init__.py  bbox.py  bbox_proc.py  detection_wrapper.py  image_wrapper.py  img_proc.py  pipeline.py
blob_detector/core/bbox_proc/: __init__.py  base.py  detector.py  filtering.py  scoring.py  splitter.py
blob_detector/core/binarizers/: __init__.py  base.py  gauss_local.py  high_pass.py  otsu.py
blob_detector/core/detectors/: base.py
blob_detector/core/img_proc/: __init__.py  border_ops.py  morphological.py  preprocessor.py  rescaler.py
blob_detector/core/pipeline/: __init__.py
blob_detector/core/wrapper/: base.py  detection.py  image.py
blob_detector/utils/: __init__.py  base.py  filters.py
blob_detector_cpp/: .gitignore  CMakeLists.txt  README.md
blob_detector_cpp/cmake/: BlobDetectorConfig.cmake.in  BlobDetectorConfigVersion.cmake.in  getVersion.cmake
blob_detector_cpp/examples/: CMakeLists.txt  main.cpp
blob_detector_cpp/examples/json_output/: CMakeLists.txt  main.cpp
blob_detector_cpp/examples/visualization/: CMakeLists.txt  main.cpp
blob_detector_cpp/include/blob_detector/: bbox.h  core.h  operations.h  utils.h  version.h
blob_detector_cpp/src/: bbox.cpp  bbox_ops.cpp  image_ops.cpp  utils.cpp
