[metadata]
name = ammod_blob_detector
version = 0.2.3
description = Blob detection algorithms for insects on a single-color (white) screen.
long_description = file:README.md
long_description_content_type = text/markdown
url = https://git.inf-cv.uni-jena.de/AMMOD/blob_detector
license = AGPLv3
classifiers =
    Development Status :: 4 - Beta
    Environment :: Web Environment
    Intended Audience :: Developers
    License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)
    Operating System :: OS Independent
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: Implementation :: CPython
    Topic :: Software Development :: Libraries :: Application Frameworks
    Topic :: Software Development :: Libraries :: Python Modules

[options]
packages = find:
include_package_data = true
python_requires = >=3.6
setup_requires =
    setuptools >= 38.3.0
install_requires =
    numpy
    opencv-python-headless~=4.6
    matplotlib

test_suite = tests.get_suite

